--- a/css/employee_payroll.css
+++ b/css/employee_payroll.css
@@ -126,3 +126,22 @@ body, html{
     flex-direction: row;
     justify-content: space-between;
 }
+#reset_btn, #submit_btn, #cancel_btn{
+    padding: 1% 3%;
+    font-size: 20px;
+    border-radius: 5px;
+    cursor: pointer;
+    border: 1px solid #969696;
+    background-color: #E2E2E2;
+    color: #42515F;
+    font-family: Roboto;
+}
+#submit_btn{
+    margin-left: 40%;
+     
+ }
+ #reset_btn{
+     display: flex;
+     align-items: flex-end;
+     
+ }
