--- a/css/login.css
+++ b/css/login.css
@@ -99,7 +99,7 @@ body,html{
 .right_contents{
     display: flex;
 }
-.table_content{
+table, .table_container{
     min-width: 80%;
     margin: 2% auto;
     justify-content: center;
